[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ellun_nf/__init__.py"

[project]
name = "ellun_nf"
authors = [
    { name="Ivan Neto", email="ivan.cr.neto@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.scripts]
ellunf = "ellun_nf.main:main"

[project.urls]
"Homepage" = "https://github.com/gogixweb/ellun-nf"